scss/modules/media.scss
/**
 * Fix ckeditor image align via "add media"
 */
div.align-center img,
figure.align-center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: max-content;
}

/**
 * Fix ckeditor videos aspect ratio
 */
.field--name-field-media-oembed-video {
  overflow: hidden;
  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
  position: relative;
  width: 100%;
}

.media-oembed-content {
  border: 0;
  bottom: 0;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

